Correccion de porcentaje

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <button class="btn" id="BAD">Aumento del Dolar</button>
         <button class="btn" id="bNS">Productos sin stock</button>
     </div>
-    
+    <div id="elementos">
     </div>
+    
     <script src="./js/jquery.js"></script>
     <script src="./js/funciones.js"></script>
 </body>
