--- a/index.html
+++ b/index.html
@@ -1,40 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
     <title>Document</title>
 </head>
-<body>
-    <h1>Gestion de control de Stock</h1>
-    <div class="controles">
-        <button class="btn" id="bNP">Agregar Nuevo Producto</button>
-        <button class="btn" id="bRV">Registrar venta</button>
-        <button class="btn" id="bAS">Agregar Stock</button>
-        <button class="btn" id="bMP">Modificar Precio</button>
-        <button class="btn" id="BAD">Aumento del Dolar</button>
-        <button class="btn" id="bNS">Productos sin stock</button>
-    </div>
-    <div id="elementos">
-        <table class="table">
-            <thead>
-                <th>ID</th>
-                <th>Nombre</th>
-                <th>Categoria</th>
-                <th>Precio</th>
-                <th>Unidades en stock</th>
-                <th>Importado</th>
-            </thead>
-            <tbody id="tablaElementos">
 
-            </tbody>
-        </table>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="./js/jquery.js"></script>
+<body>
+    <header class="header">
+        <h1>Gestion de control de Stock</h1>
+        <div class="controles">
+            <button class="btn btn-secondary" id="bNP">Agregar Nuevo Producto</button>
+            <button class="btn btn-secondary" id="bRV">Registrar venta</button>
+            <button class="btn btn-secondary" id="bAS">Agregar Stock</button>
+            <button class="btn btn-secondary" id="bMP">Modificar Precio</button>
+            <button class="btn btn-secondary" id="BAD">Aumento del Dolar</button>
+            <button class="btn btn-secondary" id="bNS">Productos sin stock</button>
+        </div>
+    </header>
+    <main>
+
+        <div class="form"id="formulario">
+            <form  class="form" id="form">
+                <label for="inputNombre">Nombre del producto</label>
+                <input type="text" required="required"id="inputNombre" class="input">
+                <label>Categoria</label>
+                <input type="text" required="required" id="inputCategoria" class="input">
+                <label for="">Precio</label>
+                <input type="number"required="required" id="inputPrecio">
+                <label for="">Cantidad</label>
+                <input type="number" required="required" id="inputCantidad">
+                <label for="inputImportado">Importado</label>
+                <input type="checkbox" id="inputImportado"><br>
+                <button type="submit" class="btn btn-primary">Registrar</button>
+                <button type="reset"id="cancelarEnvio" class="btn btn-danger">Cancelar</button>
+            </form>
+        </div>
+        <div id="elementos">
+            <table class="table">
+                <thead>
+                    <th>ID</th>
+                    <th>Nombre</th>
+                    <th>Categoria</th>
+                    <th>Precio</th>
+                    <th>Unidades en stock</th>
+                    <th>Importado</th>
+                </thead>
+                <tbody id="tablaElementos">
+
+                </tbody>
+            </table>
+        </div>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
     <script src="./js/funciones.js"></script>
 </body>
+
 </html>
